# tactile-learning

./: .gitignore  README.md
src/robotiq/robotiq_2f_hw_usb/: README.md  package.xml
src/robotiq/robotiq_2f_hw_usb/include/robotiq_2f_hw_usb/: robotiq_2f_hw_usb.hpp
src/robotiq/robotiq_2f_hw_usb/src/: robotiq_2f_hw_usb_node.cpp
src/ur_openai_ros/ur_door_opening/: CMakeLists.txt  package.xml  setup.py
src/ur_openai_ros/ur_door_opening/config/: door_opening_params (copy).yaml  door_opening_params.yaml
src/ur_openai_ros/ur_door_opening/launch/: reinforcement.launch
src/ur_openai_ros/ur_door_opening/script/: gazebo_execution.py  ppo_gae_main.py  reaching_main.py  reinforcement_main.py  wget-log
src/ur_openai_ros/ur_door_opening/script/algorithm/: REINFORCEAgent.py  __init__.py  ppo_gae.py
src/ur_openai_ros/ur_door_opening/script/env/: __init__.py  controllers_connection.py  gazebo_connection.py  joint_traj_publisher(copy).py  joint_traj_publisher.py  rlkit_ur_env.py  rlkit_ur_goal_env.py  robot_gazebo_env_goal.py  ur5_interface_gazebo.py  ur_door_opening_env(copy).py  ur_door_opening_env.py  ur_reaching_env.py
src/ur_openai_ros/ur_door_opening/script/results/: checkpoint  ppo_with_gae_model-100.data-00000-of-00001  ppo_with_gae_model-100.index  ppo_with_gae_model-1000.index  ppo_with_gae_model-200.data-00000-of-00001  ppo_with_gae_model-200.index  ppo_with_gae_model-40.data-00000-of-00001  ppo_with_gae_model-40.index  ppo_with_gae_model-400.data-00000-of-00001  ppo_with_gae_model-400.index  ppo_with_gae_model-50.data-00000-of-00001  ppo_with_gae_model-50.index  (+7 more)
(+1005 files in other folders)
